css/styles.css
/* ... */
#slide2 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #ffffff;
  font-weight: 700;
}
#slide2 h2 {
  font-size: 2em;
  color: #ffffff;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
.mainp {
  color: #ffffff;
}
.mainh {
  color: #ffffff;
  font-weight: bold;
  font-size: 1.5em;
}
.maind {
  color: #ffffff;
  margin-right: 1.25em;
  margin-left: 1.25em;
  margin-top: -1.25em;
}
/* Slide 3 - Information*/
#ytplayer {
  margin-top: 3em;
  margin-right: 22px;
}
#slide3 {
  background:url('../images/white_background.jpg');
  color: #ffffff;
}
#slide3 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #8a8683 !important;
  font-weight: 700;
}
#slide3 h2 {
  font-size: 2em;
  color: #8a8683 !important;
  line-height: 0px;
  padding-bottom: 0px;
  padding-top: 20px;
  font-weight: 400;
}
.informationp {
  margin-top: 27px;
  color: #8a8683;
}
#informationdata {
  margin-top: 40px;
}
/* Slide 4 - Social*/
#slide4 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #ffffff;
  font-weight: 700;
}
#slide4 h2 {
  font-size: 2em;
  color: #ffffff;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
#slide4 h3 {
  font-size: 1em;
  color: #ffffff;
  margin-bottom: 50px;
  line-height: 0px;
  font-weight: normal;
}
.socialcontent {
  margin-top: 20px;
  color: #ffffff;
}
.socialcontent strong {
  color: #ffffff;
  border: 2px solid #ffffff;
  padding: 5px 12px;
  border-radius: 100%;
  float: left;
  margin-right: 1em;
}
.socialcontent p {
  color: #ffffff;
  font-size: 13px;
  font-weight: bold;
}
.socialcontent .left {
  max-width: 90%;
}
/* Slide 5 - Search*/
#slide5 {
  /*background-color: #FFFFFF;*/
  background:url('../images/white_background.jpg');
  color: #8a8683;
}
#slide5 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #8a8683 !important;
  font-weight: 700;
  margin: 0.5em 0px;
}
#slide5 h2 {
  font-size: 2em;
  color: #8a8683;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}

#slide6 h2 {
  font-size: 1.5em;
  color: #FDB515;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}

.searchp {
  color: #8a8683;
  font-weight: normal;
  line-height: 0px;
  padding-top: 20px;
}
.searchd {
  color: #8a8683;
  font-weight: normal;
  line-height: 0px;
}
/* Slide 6 - Credits */
.creditsa {
  color:#FDB515 !important;
}
.creditsa :hover {
  cursor: pointer;
  color: #a9d3d0 !important;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

/* Tablet */
@media screen and (max-width: 1024px) {
  #logo {
    width: 100%;
    text-align: center;
  }
  #nav {
    width: 100%;
    text-align: center;
    margin: 10px 0;
  }
  .navigation {
    width: 100%;
    float: center;
    list-style: none;
    margin: 0;
    padding: 0;
  }
  .navigation li {
    float: left;
    width: 25%;
    padding: 0;
  }
  .slide {
    background-attachment: fixed;
    width: 100%;
    position: relative;
    padding: 150px 0;
  }
  #decorative {
    display: none;
  }
  #content {
    text-align: center;
    width: 100%;
  }
  #slide1 h1 {
    line-height: 1em;
  }
  #slide1 h2 {
    line-height: 1em;
  }
  #slide2 h1 {
    line-height: 1em;
  }
  #slide2 h2 {
    line-height: 1em;
  }
  #slide3 h1 {
    line-height: 1em;
  }
  #slide3 h2 {
    line-height: 1em;
  }
  #slide4 h1 {
    line-height: 1em;
  }
  #slide4 h2 {
    line-height: 1em;
  }
  #slide5 h1 {
    line-height: 1em;
  }
  #slide5 h2 {
    line-height: 1em;
  }
}
/* Mobile */
@media screen and (max-width: 480px) {
  #logo {
    width: 100%;
    text-align: center;
  }
  #nav {
    width: 100%;
    margin: 5px 0;
  }
  .navigation {
    width: 100%;
    float: left;
    list-style: none;
    margin: 0;
    padding: 0;
  }
  .navigation li {
    float: left;
    width: 25%;
  }
  .slide {
    background-attachment: fixed;
    width: 100%;
    position: relative;
    padding: 150px 0;
  }
  #slide1 h1 {
    line-height: 1em;
  }
  #slide1 h2 {
    line-height: 1em;
  }
  #slide2 h1 {
    line-height: 1em;
  }
  #slide2 h2 {
    line-height: 1em;
  }
  #slide3 h1 {
    line-height: 1em;
  }
  #slide3 h2 {
    line-height: 1em;
  }
  #slide4 h1 {
    line-height: 1em;
  }
  #slide4 h2 {
    line-height: 1em;
  }
}
/*** New CSS ***/
#content {
  position: relative;
}
h1.sideh1 {
  position: absolute;
  left: -40px;
  top: -2px;
}
h1.sideh12 {
  position: absolute;
  left: -40px;
  top: 310px;
}
h1.sideh13 {
  position: absolute;
  left: -40px;
  top: 70px;
}
h1.sideh14 {
  position: absolute;
  left: -40px;
  top: 140px;
}
h1.sideh15 {
  position: absolute;
  left: -40px;
  top: 370px;
}
h1.sideh16 {
  position: absolute;
  left: -40px;
  top: 440px;
}
div.center iframe {
  display: block !important;
  margin-left: auto !important;
  margin-right: auto !important;
}
.rowd .grid_1 {
  margin: 0px 5px !important;
}
.rowd strong {
  color: #000 !important;
}
.background-fade {
  background: rgba(0, 0, 0, 0.4);
  padding: 3em;
}
.fa-stack {
  font-size: 3em;
  color: #111;
}
.flag {
  max-width: initial !important;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}
.flag:hover {
  -webkit-box-shadow: 0 0 2px #525252;
  box-shadow: 0 0 2px #525252;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}
.image-zoom {
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  cursor: pointer;
}
.image-zoom:hover {
  -webkit-box-shadow: 0 0 2px #525252;
  box-shadow: 0 0 2px #525252;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}
.image-zoomed img {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.image-zoomed-title {
  color: #fff;
  padding: 2em;
  text-align: center;
  text-shadow: 0 0 5px #212121;
  position: absolute;
  bottom: 0;
}
#overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.8);
  z-index: 100;
}
.windy-demo {
  margin-top: 2em;
  width: 80%;
  color: #aaa;
}
/* ... */

